--- a/index.html
+++ b/index.html
@@ -313,8 +313,8 @@
        
         <a class="bkhome" href="#header"><img src="images/bk.png"></a>
         <div  class="caption">
-            <h3> <i class="fa fa-copyright"></i>  Created & Designed by</h3>
-            <span>Ajmal Ashraf</span>
+            <h3> <i class="fa fa-copyright"></i>  </h3>
+            <span></span>
 
         </div>
         <div class="footerimg">
